src/test/ui/arbitrary-self-types-not-object-safe.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/arbitrary-self-types-not-object-safe.rs:40:33
   |
40 |     let x = Box::new(5usize) as Box<Foo>;
   |                                 ^^^^^^^^ the trait `Foo` cannot be made into an object
   |
   = note: method `foo` has a non-standard `self` type. Only `&self`, `&mut self`, and `Box<Self>` are currently supported for trait objects

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/arbitrary-self-types-not-object-safe.rs:40:13
   |
40 |     let x = Box::new(5usize) as Box<Foo>;
   |             ^^^^^^^^^^^^^^^^ the trait `Foo` cannot be made into an object
   |
   = note: method `foo` has a non-standard `self` type. Only `&self`, `&mut self`, and `Box<Self>` are currently supported for trait objects
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<std::boxed::Box<Foo>>` for `std::boxed::Box<usize>`

error: aborting due to 2 previous errors

